--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="logonueve.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -42,9 +42,9 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="Menu.html">Menu</a></li>
+                                        <!-- <li><a href="Menu.html">Menu</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                        <li><a href="https://sandbox-b2b.revolut.com/api/1.0">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="single-blog.html">single-blog</a></li>
@@ -53,7 +53,7 @@
                                         <li><a href="#">Pages <i class="ti-angle-down"></i></a>
 
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="contact.html">Contact</a></li> -->
                                     </ul>
                                 </nav>
                             </div>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="col-xl-5 col-lg-5 d-none d-lg-block">
                             <div class="book_room">
-                                <div class="socail_links">
+                                <!-- <div class="socail_links">
                                     <ul>
                                         <li>
                                             <a href="#">
@@ -90,10 +90,10 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </div>
-                                <div class="book_btn d-none d-xl-block">
+                                </div> -->
+                                <!-- <div class="book_btn d-none d-xl-block">
                                     <a class="#" href="#">+10 367 453 7382</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-12">
@@ -364,7 +364,7 @@
                 </div>
         <!-- features_room_end -->
     <!-- about_area_start -->
-    <div class="about_area">
+    <!-- <div class="about_area">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-6">
@@ -381,8 +381,8 @@
                         <div class="about_info">
                             <div class="section_title mb-20px">
                                 <span>About Us</span>
-                                <h3>Best Burger <br>
-                                        in your City</h3>
+                                <h3>Best Delivery <br>
+                                        </h3>
                             </div>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate</p>
                             <div class="img_thumb">
@@ -392,10 +392,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- about_area_end -->
     <!-- video_area_start -->
-    <div class="video_area video_bg overlay">
+    <!-- <div class="video_area video_bg overlay">
         <div class="video_area_inner text-center">
             <h3>Burger <br>
                 Bachelor</h3>
@@ -406,7 +406,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- video_area_end -->
 
     <!-- testimonial_area_start  -->
