--- a/index.html
+++ b/index.html
@@ -658,8 +658,10 @@
     <script src="js/jquery.slicknav.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/ecc467af2b81714d7588da94c2d7e09db6f7088570b79f68be7d6210394b11c6.js"></script>
-
+    <!-- <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/ecc467af2b81714d7588da94c2d7e09db6f7088570b79f68be7d6210394b11c6.js"></script> -->
+    <script>!function(e,t,a){var c=e.head||e.getElementsByTagName("head")[0],n=e.createElement("script");n.async=!0,n.defer=!0, n.type="text/javascript",n.src=t+"/static/js/chat_widget.js?config="+JSON.stringify(a),c.appendChild(n)}(document,"https://app.engati.com",
+    {bot_key:"431a35d63a7440b7",welcome_msg:true,branding_key:"default",server:"https://app.engati.com",e:"p" });
+    </script>
     <!--contact js-->
     <script src="js/contact.js"></script>
     <script src="js/jquery.ajaxchimp.min.js"></script>
